--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.4",
     "@mui/x-data-grid": "^5.2.1",
+    "@react-pdf/font": "^2.3.1",
     "@react-pdf/renderer": "^2.0.21",
     "@reduxjs/toolkit": "^1.7.1",
     "@turf/bbox": "^6.5.0",
