--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.4",
     "@mui/x-data-grid": "^5.2.1",
-    "@react-pdf/renderer":" 2.1.0",
+    "@react-pdf/renderer":"^2.0.21",
 "@react-pdf/font": "2.2.0",
     "@reduxjs/toolkit": "^1.7.1",
     "@turf/bbox": "^6.5.0",
@@ -129,5 +129,8 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "prettier": "^2.5.1",
     "typescript": "^4.4.4"
+  },
+  "overrides": {
+    "@svgr/webpack": "^6.5.0"
   }
 }
